manifests/base/gateway/gateway-class.yaml
# SPDX-FileCopyrightText: 2026 AGENZIA TPL BACINO CITTA' METROPOLITANA MILANO, MONZA E BRIANZA, LODI, PAVIA
# SPDX-License-Identifier: EUPL-1.2
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: rpsd
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
